# LiteCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NetworkManager.hpp  README.md  chunk_array.h
.github/workflows/: cmake.yml
Bedworld/: CMakeLists.txt  README.md
resources/: cutout.frag  default.frag  default.vert  entity.frag  entity.vert  imgui.ini  simple.frag  simple.vert  transparent.frag
resources/definitions/biomes/: badlands.json  badlands_plateau.json  bamboo_jungle.json  bamboo_jungle_hills.json  basalt_deltas.json  beach.json  birch_forest.json  birch_forest_hills.json  cold_ocean.json  crimson_forest.json  dark_forest.json  dark_forest_hills.json  deep_cold_ocean.json  deep_frozen_ocean.json  deep_lukewarm_ocean.json  deep_ocean.json  deep_warm_ocean.json  desert.json  desert_hills.json  desert_lakes.json  end_barrens.json  end_highlands.json  end_midlands.json  eroded_badlands.json  flower_forest.json  forest.json  frozen_ocean.json  frozen_river.json  giant_spruce_taiga.json  giant_spruce_taiga_hills.json  giant_tree_taiga.json  giant_tree_taiga_hills.json  gravelly_mountains.json  ice_spikes.json  jungle.json  jungle_edge.json  jungle_hills.json  lukewarm_ocean.json  modified_badlands_plateau.json  modified_gravelly_mountains.json  (+39 more)
resources/definitions/configured_carvers/: canyon.json  cave.json  nether_cave.json  ocean_cave.json
resources/definitions/configured_structure_features/: bastion_remnant.json  buried_treasure.json  desert_pyramid.json  end_city.json  fortress.json  igloo.json  jungle_pyramid.json  mansion.json  mineshaft.json  mineshaft_mesa.json  monument.json  nether_fossil.json  ocean_ruin_cold.json  ocean_ruin_warm.json  pillager_outpost.json  ruined_portal.json  ruined_portal_desert.json  ruined_portal_jungle.json  ruined_portal_mountain.json  ruined_portal_nether.json  ruined_portal_ocean.json  ruined_portal_swamp.json  shipwreck.json  shipwreck_beached.json  stronghold.json  swamp_hut.json  village_desert.json  village_plains.json  village_savanna.json  village_snowy.json  village_taiga.json
resources/definitions/configured_surface_builders/: badlands.json  basalt_deltas.json  crimson_forest.json  desert.json  end.json  eroded_badlands.json  frozen_ocean.json  full_sand.json  giant_tree_taiga.json  grass.json  gravelly_mountain.json  ice_spikes.json  mountain.json  mycelium.json  nether.json  nope.json  ocean_sand.json  shattered_savanna.json  soul_sand_valley.json  stone.json  swamp.json  warped_forest.json  wooded_badlands.json
resources/shaders/: entity.frag  entity.vert  transparent.frag
src/: Block.cpp  Block.hpp  BlockData.hpp  BlockReader.hpp  BlockTable.hpp  BlockTessellator.cpp  Chunk.hpp  ChunkRenderCache.h  ChunkStatus.cpp  ChunkStatus.hpp  ClientChunkProvider.h  ClientWorld.hpp  Configs.cpp  Connection.hpp  CraftServer.cpp  CraftServer.hpp  DefaultSurfaceBuilder.cpp  DefaultSurfaceBuilder.h  ImLogger.hpp  Json.cpp  NetworkManager.hpp  Packet.hpp  PacketManager.hpp  ResourceManager.hpp  ServerWorld.hpp  SurfaceBuilder.h  TextureAtlas.hpp  ThreadLocal.hpp  WorldGenRegion.cpp  WorldGenRegion.hpp  WorldLightManager.hpp  WorldRenderer.cpp  WorldRenderer.hpp  block.cpp  block.hpp  block_reader.hpp  block_table.hpp  block_tessellator.cpp  boot.cpp  camera.hpp  (+21 more)
src/block/: AbstractBannerBlock.cpp  AbstractBannerBlock.hpp  AbstractBlock.hpp  AbstractBodyPlantBlock.cpp  AbstractBodyPlantBlock.hpp  AbstractButtonBlock.cpp  AbstractButtonBlock.hpp  AbstractChestBlock.cpp  AbstractChestBlock.hpp  AbstractCoralPlantBlock.cpp  AbstractCoralPlantBlock.hpp  AbstractFireBlock.cpp  AbstractFireBlock.hpp  AbstractFurnaceBlock.cpp  AbstractFurnaceBlock.hpp  AbstractGlassBlock.cpp  AbstractGlassBlock.hpp  AbstractPlantBlock.cpp  AbstractPlantBlock.hpp  AbstractPressurePlateBlock.hpp  AbstractRailBlock.cpp  AbstractRailBlock.hpp  AbstractSignBlock.cpp  AbstractSignBlock.hpp  AbstractSkullBlock.cpp  AbstractSkullBlock.hpp  AbstractTopPlantBlock.cpp  AbstractTopPlantBlock.hpp  AirBlock.cpp  AirBlock.hpp  AnvilBlock.cpp  AnvilBlock.hpp  AttachedStemBlock.cpp  AttachedStemBlock.hpp  BambooBlock.cpp  BambooBlock.hpp  BambooSaplingBlock.cpp  BambooSaplingBlock.hpp  BannerBlock.cpp  BannerBlock.hpp  (+395 more)
src/block/material/: BlockMaterial.hpp  DyeColors.hpp  Material.hpp  MaterialColor.hpp  MaterialColors.hpp  Materials.cpp  Materials.hpp  PushReaction.hpp
src/client/render/: BlockTessellator.cpp  ChunkRenderCache.h  ChunkRenderCache.hpp  Definition.cpp  Definition.hpp  EntityModel.hpp  (+8 more)
src/core/: AppPlatform.hpp  Camera.hpp  Device.hpp  FrameInfo.hpp  ImGuiLayer.hpp  Image.hpp  RenderTarget.hpp  Shader.hpp  Surface.hpp  Viewport.hpp  Window.hpp
src/entity/: EntityClassification.hpp  EntityType.hpp
src/json/: fifo_map.hpp  json.hpp
src/nbt/: nbt.hpp  utils.hpp
src/net/: addr.hpp  ip.hpp  sock.cpp  sock.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
src/particles/: ParticleType.hpp  ParticleTypes.hpp
src/potion/: Effects.hpp
src/sounds/: BackgroundMusicTrack.hpp  BackgroundMusicTracks.cpp  BackgroundMusicTracks.hpp  SoundEvent.hpp  SoundEvents.cpp  SoundEvents.hpp
src/state/: AttachFace.hpp  BambooLeaves.hpp  BedPart.hpp  BellAttachment.hpp  BlockStateProperties.hpp  BooleanProperty.hpp  ChestType.hpp  ComparatorMode.hpp  DirectionProperty.hpp  DoorHingeSide.hpp  DoubleBlockHalf.hpp  EnumProperty.hpp  Half.hpp  IntegerProperty.hpp  JigsawOrientation.hpp  NoteBlockInstrument.hpp  PistonType.hpp  Property.hpp  RailShape.hpp  RedstoneSide.hpp  SlabType.hpp  StairsShape.hpp  StructureMode.hpp  WallHeight.hpp
src/tags/: BlockTags.cpp  BlockTags.hpp  NamedTag.hpp
src/util/: Codec.hpp  Direction.hpp  DirectionUtil.hpp  FastRandom.hpp  Mirror.hpp  MirrorUtil.hpp  Orientation.hpp  Random.hpp  Registry.hpp  Rotation.hpp  RotationUtil.hpp  Trait.hpp  Utils.hpp  WeightedList.hpp  complete_queue.hpp  generate_queue.hpp  linked_unordered_map.hpp  match.hpp
src/world/: BlockReader.hpp  ChunkManager.cpp  ChunkManager.hpp  ServerWorld.cpp  ServerWorld.hpp  WorldGenRegion.cpp  WorldGenRegion.hpp  WorldReader.cpp  WorldReader.hpp  WorldWriter.hpp
(+218 files in other folders)
